--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,23 @@
 name: Deploy to VPS
-
 on:
   push:
     branches: [main]
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build Next.js app
+        run: npm run build
 
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
@@ -22,4 +31,17 @@ jobs:
 
       - name: Deploy with rsync
         run: |
-          rsync -avz --delete ./ root@${{ secrets.SSH_HOST }}:/var/www/eddy-as.my.id/html/
+          rsync -avz --delete ./.next/ root@${{ secrets.SSH_HOST }}:/var/www/eddy-as.my.id/html/.next/
+          rsync -avz --delete ./public/ root@${{ secrets.SSH_HOST }}:/var/www/eddy-as.my.id/html/public/
+          rsync -avz package.json package-lock.json next.config.js root@${{ secrets.SSH_HOST }}:/var/www/eddy-as.my.id/html/
+
+      - name: Install dependencies & restart PM2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: root
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd /var/www/eddy-as.my.id/html
+            npm install --production
+            pm2 restart portfolio || pm2 start npm --name "portfolio" -- start
